# cuPDLPx

./: .gitignore  CMakeLists.txt  Makefile  README.md  Read_Summary-2.ipynb  Read_Summary-diag.ipynb  Read_Summary.ipynb  benchmark_c_code.sh  miplib_instance.txt  pyproject.toml
.github/workflows/: build.yml
cupdlpx/: cli.c  cli.h  interface.c  interface.h  io.c  mps_parser.c  mps_parser.h  parser.c  preconditioner.c  preconditioner.h  solver.cu  solver.h  utils.cu  utils.h
docs/: C_API.md
include/: cupdlpx.h  cupdlpx_types.h  mps_parser.h
internal/: cuda_to_hip.h  cusparse_compat.h  internal_types.h  preconditioner.h  solver.h  utils.h
python/: README.md
python/cupdlpx/: PDLP.py  __init__.py  _core.py  model.py
python_bindings/: _core_bindings.cpp
slurm/: slurm-c-vtx-benchmark-6578038_1.out  slurm-c-vtx-benchmark-6578038_2.out  slurm-c-vtx-benchmark-6578043_1.out  slurm-c-vtx-benchmark-6578043_2.out  slurm-c-vtx-benchmark-6635649_1.out  slurm-c-vtx-benchmark-6635649_2.out  slurm-c-vtx-benchmark-6635652_1.out  slurm-c-vtx-benchmark-6635652_2.out  slurm-c-vtx-benchmark-6739481_1.out  slurm-c-vtx-benchmark-6739481_2.out  slurm-c-vtx-benchmark-6739483_1.out  slurm-c-vtx-benchmark-6739483_2.out  slurm-c-vtx-benchmark-6828355_1.out  slurm-c-vtx-benchmark-6828355_2.out  slurm-c-vtx-benchmark-6828368_1.out  slurm-c-vtx-benchmark-6828368_2.out
src/: cli.c  cupdlpx.c  feasibility_polish.cu  mps_parser.c  preconditioner.c  preconditioner.cu  presolve.c  solver.cu  spmv_backend.cu  utils.cu
test/: test_api_surface.py  test_basic.py  test_feasibility_polishing.py  test_infeasible_unbounded.py  test_interface.c  test_limit.py  test_matrix_formats.py  test_numerical.py  test_presolve.py  test_read_mps.py  test_warm_start.py
